	results with stacking turned on.

	Change base pair filtering by probability for stacking: ignore
	stacking probability, filter only by base pair probability.

	(locarna-1.4.9alpha)


Jan, 2010
	new tool Utils/reliability-profile.pl generates nice
	profile plots from mlocarna --probabilistic output directories

	stacking turned off, unless exp-prob option used

	(locarna-1.5a)

Mar, 2010
	Add normalized local alignment, proof of concept
	(locarna-1.5.1)
	Combine normalized alignment and kbest
	Introduce option better to enumerate suboptimal solution
	better than given threshold
	--kbest and --better can be used together
	(locarna-1.5.2)
	Fix build in separate build directory

May, 2010
	Introduce new representation of fasta data
	Major restructuring/refactorization of mlocarna.in and MLocarna.pm
	Move many functions of mlocarna.in to packages and
	introduce several new packages to group functions thematically
	(locarna-1.5.3)

	Resolve a bug that made LocARNA handle Ts as unknown
	characters. LocARNA now automatically transforms Ts to Us in input
	sequences. The bug did not affect input sequences without Ts. For
	matchs involving Ts, LocARNA wrongly used an ad-hoc score instead
	of the ribosum score for matches involving 'U', as one would
	expect.

Oct, 2010
	Add EdgeController: adds feature to constrain (max-diff-match)
	alignment relative to a given alignment.  Change handling of
	max-diff-match in case of unequal length: instead of relaxing
	constraint, change constraint to |i*(lenB/lenA)-j|<=max-diff
	Add multiple alignment class to support construction of EdgeController.

Nov, 2010
	Change Copyright to GPL v2 and update README

	rename max-diff-match to max-diff heuristic.

	replace EdgeController by TraceController use the max-diff delta
	( TraceController ) to restrict alignment of paired and unpaired
	positions (not only ends of arcs) in Aligner. Semantics is given by
	restriction of alignment cuts/matrix cells!

	